templates/radar-s3-connector_template.yaml
---
# Source: radar-s3-connector/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-radar-s3-connector
  labels:
    helm.sh/chart: radar-s3-connector-0.3.2
    app.kubernetes.io/name: radar-s3-connector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.6.0-hotfix"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-s3-connector-0.3.2
      app.kubernetes.io/name: radar-s3-connector
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "7.6.0-hotfix"
      app.kubernetes.io/managed-by: Helm
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-kafka
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-schema-registry
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: catalog-server
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: minio
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  policyTypes:
  - Egress
---
# Source: radar-s3-connector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radar-s3-connector
  labels:
    helm.sh/chart: radar-s3-connector-0.3.2
    app.kubernetes.io/name: radar-s3-connector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.6.0-hotfix"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radar-s3-connector
    app.kubernetes.io/instance: release-name
---
# Source: radar-s3-connector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radar-s3-connector
  labels:
    helm.sh/chart: radar-s3-connector-0.3.2
    app.kubernetes.io/name: radar-s3-connector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.6.0-hotfix"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-s3-connector
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/configmap: 4223604db9ccc9558baf8893cfb644230914f343e275861f1b5eb26f1ffc36bf
        checksum/secret: 74c2d941238b8c7f68b08ed1b99acc769184a5389447de1b4ef9a2fb9310d08a
      labels:
        app.kubernetes.io/name: radar-s3-connector
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-s3-connector
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: radar-s3-connector
          securityContext:
            {}
          image: "radarbase/kafka-connect-transform-s3:7.6.0-hotfix"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/kafka-connect/sink-s3/original/healthcheck.sh
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/kafka-connect/sink-s3/original/healthcheck.sh
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 3Gi
          volumeMounts:
            - name: config-original
              mountPath: /etc/kafka-connect/sink-s3/original
            - name: config-updated
              mountPath: /etc/kafka-connect/sink-s3
      volumes:
        - name: config-original
          configMap:
            name: release-name-radar-s3-connector
        - name: config-updated
          emptyDir: {}
---
# Source: radar-s3-connector/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-radar-s3-connector-test-connection"
  labels:
    app.kubernetes.io/name: radar-s3-connector
    helm.sh/chart: radar-s3-connector-0.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-radar-s3-connector:8083']
  restartPolicy: Never
